--- a/app/views/job_postings/manage.html.erb
+++ b/app/views/job_postings/manage.html.erb
@@ -39,7 +39,7 @@
 
       <% if @managed_postings.count >= 10 %>
         <!-- show the paginator for the will_paginate gem -->
-        <center><%= will_paginate @open_job_postings, renderer: BootstrapPagination::Rails, page_links: false %><br /></center>
+        <center><%= will_paginate @managed_postings, renderer: BootstrapPagination::Rails, page_links: false %><br /></center>
       <% end %>
 
     </div>
