Adding Required Questions & Training Box
Adding two required questions from gamma.B.6.3 and hiring training reminder.

--- a/app/views/job_posting_questions/index.html.erb
+++ b/app/views/job_posting_questions/index.html.erb
@@ -40,12 +40,23 @@
     <div class="card">
       <div class="card-body">
         <p class="lead">
-          Recommmended Questions:
+          Required Questions:
         </p>
         <ul>
-          <li>Interviews will be scheduled for [insert days here]. Are there any conflicts you have with these days?</li>
-          <li>What is the best number to contact you at regarding your interviews?</li>
+          <li>Why do you believe you would be a good fit for the position of <insert position here>?</li>
+          <li>Interviews are scheduled to be <insert date(s) here>. Do you have any conflicts with this/these date(s) and if so when?</li>
         </ul>
+        It is also recommended that you ask for contact preference (phone/email) at some point in the hiring process.
+      </div>
+    </div>
+    
+    <div class="card">
+      <div class="card-body">
+        <p class="lead">
+          Friendly Reminder:
+        </p>
+        All members of the hiring panel must have had <b>Hiring Training</b> in this semester before hiring can begin. Contact the Director of Human Resources at hr@engsoc.queensu.ca to organize a training session.
+        For more information, see EngSoc Policy section gamma.
       </div>
     </div>
 
