Fixing formatting of text in cards

--- a/app/views/job_posting_questions/index.html.erb
+++ b/app/views/job_posting_questions/index.html.erb
@@ -43,10 +43,10 @@
           Required Questions:
         </p>
         <ul>
-          <li>Why do you believe you would be a good fit for the position of <insert position here>?</li>
-          <li>Interviews are scheduled to be <insert date(s) here>. Do you have any conflicts with this/these date(s) and if so when?</li>
+          <li>Why do you believe you would be a good fit for the position of (<i>insert position here</i>)?</li>
+          <li>Interviews are scheduled to be (<i>insert date(s) here</i>). Do you have any conflicts with this/these date(s) and if so when?</li>
         </ul>
-        It is also recommended that you ask for contact preference (phone/email) at some point in the hiring process.
+        It is also recommended that you ask for contact preference - phone/email - at some point in the hiring process.
       </div>
     </div>
     
