Adding description guidelines at the top

--- a/app/views/job_postings/edit.html.erb
+++ b/app/views/job_postings/edit.html.erb
@@ -5,6 +5,20 @@
 <div class="container-fluid container-lg">
   <div class="card">
     <div class="card-body">
+      <p class="lead">
+        Description Guidelines:
+      </p>
+      Please be sure to include the following in your posting description to ensure swift approval of your posting:
+      <ul>
+        <li>A thorough description of the responsibilities of the position</li>
+        <li>Qualifications or attributes you will be looking for in a good applicant</li>
+        <li>A means of contact - usually email - if someone has any questions or concerns about the application</li>
+      </ul>
+      Additionally, please make note of any additional requirements for the applications (resumes, proposals, etc.) and if an interview will be conducted in groups, as per EngSoc Hiring Policy B.6.
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-body">
       <!-- render the job posting form -->
       <%= render 'job_posting_form' %>
     </div>
