--- a/app/views/user_mailer/interview_scheduled.html.erb
+++ b/app/views/user_mailer/interview_scheduled.html.erb
@@ -25,7 +25,7 @@
       </p>
       <br>
       <p>
-        Please wait in the ILC Student Lounge (unless otherwise specified by the hiring panel) 15 minutes before your scheduled time.
+        Please wait in the ILC Student Lounge (BMH Room 106) - unless otherwise specified by the hiring panel - 15 minutes before your scheduled time.
       </p>
       <p>
         Should you have any questions about the interview, or would like to reschedule, please email <%= mail_to @job_application.job_posting.job.organization.email %>.
