Updating date notice

--- a/app/views/job_postings/_job_posting_form.html.erb
+++ b/app/views/job_postings/_job_posting_form.html.erb
@@ -57,11 +57,13 @@
     <div class="col-sm-11 col-sm-offset-1">
       <div class="alert alert-info mt">
         <p>
-          Job Postings can begin to interview candidates only after the deadline.
+          Interviews can only be scheduled in Dash once the deadline has been passed and the application set to "interviewing". If you need to schedule interviews before the application deadline, individual emails will need to be sent. Consult the Director of Human Resources before proceeding with this option. 
         </p>
         <p>
-          It is recommended that you at set the deadline to be at least <em><strong class="lead"><%= (Date.today + 2.weeks).strftime("%B %d, %Y") %></strong></em> (2 weeks from now), as per EngSoc policy, for the job posting to be approved.
+          It is recommended that you set the deadline to be at least <em><strong class="lead"><%= (Date.today + 2.weeks).strftime("%B %d, %Y") %></strong></em> (2 weeks from now), as per EngSoc Hiring Policy B.5.3, for the job posting to be approved. Please ensure that the Director of Human Resources knows of this posting pending approval to ensure swift approval.
         </p>
+        <p>
+          <b>Note:</b> The posting will close the <i>day before</i> the date selected, at midnight.
       </div>
     </div>
   </div>
