Adding blurb about policy

--- a/app/views/job_postings/show.html.erb
+++ b/app/views/job_postings/show.html.erb
@@ -37,3 +37,12 @@
     </div>
   </div>
 </div>
+<div class="container container-lg">
+  <div class="card">
+    <div class="card-body">
+      <p>
+        Please note that all EngSoc hiring is done according to EngSoc Hiring Policy as seen in Section Gamma of the EngSoc Policy Manual available on our website under "About - Government - Governing Documents".
+      </p>
+    </div>
+  </div>
+</div>
