Making policy more specific, adding hr email

--- a/app/views/job_applications/new.html.erb
+++ b/app/views/job_applications/new.html.erb
@@ -17,13 +17,13 @@
       <p>Before you begin your application please acknowledge the following:
         <ul>
           <li>
-            The Engineering Society is an Equal Opportunity Hiring Organization
+            The Engineering Society is an Equal Opportunity Hiring Organization. No experience is required for our positions.
           </li>
           <li>
-            Hiring will be done in accordance with Engineering Society Hiring Policy Manual as seen on the Engineering Society website.
+            All EngSoc hiring is done according to EngSoc Hiring Policy as seen in Section Gamma of the EngSoc Policy Manual available on our website under "About - Government - Governing Documents"
           </li>
           <li>
-            If you have any questions regarding the interview process please feel free to email <a href="mailto:vpsa@engsoc.queensu.ca">vpsa@engsoc.queensu.ca.</a>
+            If you have any questions regarding the interview process please feel free to email <a href="mailto:hr@engsoc.queensu.ca">hr@engsoc.queensu.ca.</a>
           </li>
           <li>
             Please feel free to contact the Engineering Review Board at <a href="mailto:erb@engsoc.queensu.ca">erb@engsoc.queensu.ca</a> for any concerns regarding the interview process.
