--- a/app/views/job_applications/_job_posting_header.html.erb
+++ b/app/views/job_applications/_job_posting_header.html.erb
@@ -3,7 +3,12 @@
     <%= link_to @job_posting.title, @job_posting %>
   </p>
   <p>
-    Application Deadline: <%= distance_of_time_in_words(Time.now, @job_posting.deadline) %> (<%= @job_posting.deadline.to_date %>)
+    Application Deadline:
+    <% if @jobposting.deadline.past? %>
+          <%= @jobposting.deadline.to_date %>
+        <% else %>
+          in <%= distance_of_time_in_words(Time.now, @jobposting.deadline) %> (<%= @jobposting.deadline.to_date %>)
+        <% end %>
   </p>
   <p>
     Organization: <%= link_to @job_posting.job.organization.name, @job_posting.job.organization %>
