Adding accessibility blurb

--- a/app/views/job_applications/new.html.erb
+++ b/app/views/job_applications/new.html.erb
@@ -37,7 +37,13 @@
       <p>
         Interview times will be sent directly to your e-mail. Interviews may start 24 hours after times are posted. Applicants are responsible for being aware of their scheduled interview time. It is the applicant's responsibility to e-mail the listed contact prior to their interview should they need to reschedule.
       </p>
-
+      <div class="row">
+        <div class="alert alert-info mt">
+          <p>
+            If you have any accessibility concerns, and require accomodations for any reason, please contact the hiring panel by email ahead of the interview. If you have any specific concerns related to accessibility, please do not hesitate to contact the Director of Human Resources at <a href="mailto:hr@engsoc.queensu.ca">hr@engsoc.queensu.ca.</a>.
+          </p>
+        </div>
+      </div>
     <%= render 'job_application_form' %>
     </div>
   </div>
