Changed the close job posting button to only appear when interviewing
Workflow while using dash has caused people to close their posting instead of beginning interviewing. I have changed the flow so when an application is 'open' the button will now begin interviewing and when it is 'interviewing' the button will close the posting if pressed.

--- a/app/views/job_postings/_job_posting_list_item_dropdown.html.erb
+++ b/app/views/job_postings/_job_posting_list_item_dropdown.html.erb
@@ -19,11 +19,17 @@
           <li>
             <%= link_to "Begin Interviewing", interview_job_posting_path(posting) %>
           </li>
+          <li>
+            <%= link_to "Close Job Posting", close_job_posting_path(posting) %>
+          </li>
         <% end %>
       <% else %>
         <% if posting.status == "open" %>
           <li>
             <%= link_to "Begin Interviewing", interview_job_posting_path(posting) %>
+          </li>
+          <li>
+            <%= link_to "Close Job Posting", close_job_posting_path(posting) %>
           </li>
         <% else %>
           <li>
