--- a/app/views/job_postings/_job_posting_status_button.html.erb
+++ b/app/views/job_postings/_job_posting_status_button.html.erb
@@ -1,7 +1,13 @@
 <% if posting.status != "closed" %>
-  <%= link_to close_job_posting_path(posting), class: "btn btn-primary", :"data-html" => "true", :"data-toggle" => "popover", :"data-content" => "Close the job posting, and decline all applicants who were not hired.<br /><br /> Select this after the job has been filled.", :"data-title" => "Closing a Job Posting", :"data-trigger" => "hover", :"data-placement" => "auto", data: { :confirm => "Are you sure you're finished with this job posting?" } do %>
-    <em class="ion-android-checkmark-circle icon-lg mr-sm"></em>Close Job Posting
-  <% end %>
+	<% if posting.status != "interviewing"%>
+	  <%= link_to interview_job_posting_path(posting), class: "btn btn-primary" do %>
+		<em class="ion-android-checkmark-circle icon-lg mr-sm"></em>Begin Interviewing
+	  <% end %>
+	<% else %>
+	  <%= link_to close_job_posting_path(posting), class: "btn btn-primary", :"data-html" => "true", :"data-toggle" => "popover", :"data-content" => "Close the job posting, and decline all applicants who were not hired.<br /><br /> Select this after the job has been filled.", :"data-title" => "Closing a Job Posting", :"data-trigger" => "hover", :"data-placement" => "auto", data: { :confirm => "Are you sure you're finished with this job posting?" } do %>
+	    <em class="ion-android-checkmark-circle icon-lg mr-sm"></em>Close Job Posting
+	  <% end %>
+	<% end %>
 <% else %>
   <%= link_to reopen_job_posting_path(posting), class: "btn btn-warning", :"data-html" => "true", :"data-toggle" => "popover", :"data-content" => "Reopen the job posting, and archive all previous applicants.<br /><br /> Select this to restart the hiring process using the same job and job posting details.", :"data-title" => "Reopening a Job Posting", :"data-trigger" => "hover", :"data-placement" => "auto", data: { :confirm => "Are you sure you want to begin hiring for this job posting?" } do %>
     <em class="ion-android-checkmark-circle icon-lg mr-sm"></em>Reopen Job Posting
