--- a/app/views/job_postings/_job_posting_list_item_dropdown_admin.html.erb
+++ b/app/views/job_postings/_job_posting_list_item_dropdown_admin.html.erb
@@ -18,6 +18,9 @@
         <li>
           <%= link_to "Begin Interviewing", interview_job_posting_path(posting) %>
         </li>
+				<li>
+					<%= link_to "Close Job Posting", close_job_posting_path(posting) %>
+				</li>
       <% end %>
       <li>
         <%= link_to "Edit Posting", edit_job_posting_path(posting.id) %>
