Change to Draft Applicants
When close job posting is clicked, all applicants who applied and weren't hired will be declined. Any applicants who only have a draft application will now not be marked as declined but grouped under a draft applications panel. This should clear up some confusion.

--- a/app/views/job_applications/index.html.erb
+++ b/app/views/job_applications/index.html.erb
@@ -25,6 +25,9 @@
   <%= render "job_applications_table", applications: @interviewing_job_applications%>
   <%= render "job_applications_table", applications: @submitted_job_applications%>
   <%= render "job_applications_table", applications: @declined_job_applications%>
+	<% if @job_posting.status == "closed" %>
+		<%= render "job_applications_table", applications: @draft_job_applications %>
+	<% end %>
 
   <% if !@submitted_job_applications.any? && !@hired_job_applications.any? && !@declined_job_applications.any? %>
     <div class="">
