Revert "Merge pull request #19 from QueensEngineeringSociety/dev"
This reverts commit ca79c9a130669bd02fca18775f2f7704a7a68964, reversing
changes made to 5e5b74d18b27c36da8f82fdde55ae22323f75e6d.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,6 @@
 <% content_for :title, "Admin Users" %>
 
-<!-- Search Bar -->
-<div class="card">
-	<form action="/profiles" name="search_form" method="get" class="card-body">
-		<table style="width:128%">
-			<tr>
-				<th><input type="text" id="query" name="query" style="width:98%" placeholder="Search" class="form-control"></th>
-				<th><button type="submit" class="btn btn-primary">Search</button></th>
-			</tr>
-		</table>
-	</form>
-</div>
-
-<!-- main container for users -->
+<!-- main container for job postings -->
 <div class="container-fluid container-lg">
   <div class="card">
     <table class="table table-hover table-fixed va-middle">
