Revert "Revert "Merge pull request #19 from QueensEngineeringSociety/dev""
This reverts commit 16882f849386a352d4dbfee2f07aa387fdaef625.

--- a/app/views/job_postings/search.html.erb
+++ b/app/views/job_postings/search.html.erb
@@ -1,18 +1,6 @@
 <!-- define title for the page -->
 <% content_for :title, "Job Postings" %>
 
-<!-- Search Bar -->
-<div class="card">
-	<form action="/job_postings" name="search_form" method="get" class="card-body">
-		<table style="width:128%">
-			<tr>
-				<th><input type="text" id="query" name="query" style="width:98%" placeholder="Search" class="form-control"></th>
-				<th><button type="submit" class="btn btn-primary">Search</button></th>
-			</tr>
-		</table>
-	</form>
-</div>
-
 <!-- main container for job postings -->
 <div class="container-fluid container-lg">
 
@@ -32,6 +20,13 @@
       <% end %>
     </div>
   </div>
+
+	<!-- Search Bar -->
+	<div class = "card">
+		<form action="/job_postings/search" method="get">
+	    <input type="text" id="query" name="query" class="form-control">
+		</form>
+	</div>
 
   <div class="card">
     <div class="card-body">
