Update scheduled interview email template

--- a/app/views/user_mailer/interview_scheduled.html.erb
+++ b/app/views/user_mailer/interview_scheduled.html.erb
@@ -25,10 +25,7 @@
       </p>
       <br>
       <p>
-        Please wait in the ILC Student Lounge (BMH Room 106) - unless otherwise specified by the hiring panel - 15 minutes before your scheduled time.
-      </p>
-      <p>
-        Should you have any questions about the interview, or would like to reschedule, please email <%= mail_to @job_application.job_posting.job.organization.email %>.
+        Please watch for a follow up email shortly with information about how your interview will be conducted. If you don't recieve it within 12 hours of this email, please reach out to your interview panel chair at <%= mail_to @job_application.job_posting.job.organization.email %> for instructions.
       </p>
       <p>
         Otherwise, no further action is needed from you to confirm the interview. You can view all your interviews at <%= link_to "my job applications", user_job_applications_url %>.
